<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
<!-- didn't make this one focusable, the user already heard the title when they picked it on the previous screen  -->
<TextView  
    android:id="@+id/details_title"
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    />
    
<TextView  
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text="@string/details_rating_prompt"
    />
<!--  focusable so that the user can have the value read out to them by navigating across it in talk back mode -->    
<TextView  
    android:id="@+id/details_rating"
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:focusable="true" 
    android:contentDescription="@string/details_rating_description"
    />
    
<Button
    android:id="@+id/details_view"
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text="@string/details_view"
    android:contentDescription="@string/details_view_description"
    />
<Button
    android:id="@+id/details_share"
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text="@string/details_share"
    android:contentDescription="@string/details_share_description"
    />
<Button
    android:id="@+id/details_rate_up"
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text="@string/details_rate_up"
    android:contentDescription="@string/details_rate_up_description"
    />
<Button
    android:id="@+id/details_rate_down"
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text="@string/details_rate_down"
    android:contentDescription="@string/details_rate_down_description"
    />
<Button
    android:id="@+id/details_channel_stats"
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text="@string/details_channel_stats"
    android:contentDescription="@string/details_channel_stats_description"
    />
</LinearLayout>
