<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
<TextView  
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text="@string/search_prompt"
    />
<EditText
    android:id="@+id/search_terms"
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:contentDescription="@string/search_terms_description"
    />
<Button
    android:id="@+id/search_videos"
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text="@string/search_videos"
    android:contentDescription="@string/search_videos_description"
    />
<Button
    android:id="@+id/search_channels"
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text="@string/search_channels"
    android:contentDescription="@string/search_channels_description"
    />
</LinearLayout>
