<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
<!-- didn't make this one focusable, the user already heard the title when they picked it on the previous screen  -->
<TextView  
    android:id="@+id/details_title"
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    />
<TextView  
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text="@string/channel_details_caption_percentage_prompt"
    />
<!--  focusable so that the user can have the value read out to them by navigating across it in talk back mode -->
<TextView  
    android:id="@+id/details_percentage"
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:focusable="true" 
    android:contentDescription="@string/channel_details_caption_percentage_description"
    />
<TextView  
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text="@string/details_rating_prompt"
    />
<!--  focusable so that the user can have the value read out to them by navigating across it in talk back mode -->
<TextView  
    android:id="@+id/details_rating"
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:focusable="true" 
    android:contentDescription="@string/details_rating_description"
    />
<TextView  
    android:id="@+id/details_limit"
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:focusable="true" 
    android:text="@string/details_limit"
    android:contentDescription="@string/details_limit_description"
    android:visibility="gone"
    />
</LinearLayout>
