<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
	<LinearLayout  
	    android:orientation="vertical"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    >
		<Button
		    android:id="@+id/results_previous"
		    android:layout_width="fill_parent" 
		    android:layout_height="wrap_content" 
		    android:text="@string/results_previous"
		    android:contentDescription="@string/results_previous_description"
		    />
		<Button
		    android:id="@+id/results_1"
		    android:layout_width="fill_parent" 
		    android:layout_height="wrap_content" 
		    android:contentDescription="@string/results_item_description"
		    />
		<Button
		    android:id="@+id/results_2"
		    android:layout_width="fill_parent" 
		    android:layout_height="wrap_content" 
		    android:contentDescription="@string/results_item_description"
		    />
		<Button
		    android:id="@+id/results_3"
		    android:layout_width="fill_parent" 
		    android:layout_height="wrap_content" 
		    android:contentDescription="@string/results_item_description"
		    />
		<Button
		    android:id="@+id/results_4"
		    android:layout_width="fill_parent" 
		    android:layout_height="wrap_content" 
		    android:contentDescription="@string/results_item_description"
		    />
		<Button
		    android:id="@+id/results_5"
		    android:layout_width="fill_parent" 
		    android:layout_height="wrap_content" 
		    android:contentDescription="@string/results_item_description"
		    />
		<Button
		    android:id="@+id/results_6"
		    android:layout_width="fill_parent" 
		    android:layout_height="wrap_content" 
		    android:contentDescription="@string/results_item_description"
		    />
		<Button
		    android:id="@+id/results_7"
		    android:layout_width="fill_parent" 
		    android:layout_height="wrap_content" 
		    android:contentDescription="@string/results_item_description"
		    />
		<Button
		    android:id="@+id/results_8"
		    android:layout_width="fill_parent" 
		    android:layout_height="wrap_content" 
		    android:contentDescription="@string/results_item_description"
		    />
		<Button
		    android:id="@+id/results_9"
		    android:layout_width="fill_parent" 
		    android:layout_height="wrap_content" 
		    android:contentDescription="@string/results_item_description"
		    />
		<Button
		    android:id="@+id/results_10"
		    android:layout_width="fill_parent" 
		    android:layout_height="wrap_content" 
		    android:contentDescription="@string/results_item_description"
		    />
		<Button
		    android:id="@+id/results_next"
		    android:layout_width="fill_parent" 
		    android:layout_height="wrap_content" 
		    android:text="@string/results_next"
		    android:contentDescription="@string/results_next_description"
		    />
	</LinearLayout>
</ScrollView>
